# MakeMeFly

./: .gitignore  .gitmodules  LICENSE.txt  README.md
CPLD/: MouseWheelHandlerTB.vhd  PWMDevice.vhdl  SPISlavePWM.out.sdc  SPISlavePWM.qpf  SPISlavePWM.qsf  SPISlavePWM.qws  SPISlavePWM.sdc  SPISlavePWM.svf  SPISlavePWM.xsvf  SPISlavePWM_nativelink_simulation.rpt  SPIslavePWM.vhdl  asd.vcd  pwmTB.vhdl  pwmtb  regTB.vhdl.pippa  regtb  work-obj93.cf
CPLD/incremental_db/compiled_partitions/: SPISlavePWM.db_info  SPISlavePWM.root_partition.map.kpt
Circuit/: Coil_driver.pro
MSP/: .gitignore  CMakeLists.txt  adc_test_1.c
MSP/ConstantField/: CMakeLists.txt  constantField.c  onOff.c  testPWM.c  uart.c  uart.h
Mouse/: PS2MouseInterface.qpf  PS2MouseInterface.qsf  PS2MouseInterface.qws  PS2MouseInterface.vhd  mux21.vhd  reg.vhdl
Mouse/incremental_db/compiled_partitions/: PS2MouseInterface.db_info  PS2MouseInterface.root_partition.map.kpt
MouseWheel/: MouseWheelHandler.out.sdc  MouseWheelHandler.qpf  MouseWheelHandler.qsf  MouseWheelHandler.qws  MouseWheelHandler.sdc  MouseWheelHandler.vhd  MouseWheelHandler.vhd.cfg  MouseWheelHandlerTB.vhd  MouseWheelHandler_nativelink_simulation.rpt  cacca.vhd  reg.cpp  reg.vhdl  vsim.wlf
MouseWheel/incremental_db/compiled_partitions/: MouseWheelHandler.db_info  MouseWheelHandler.root_partition.map.kpt
Plotter/: Plotter_IF.glade  makemefly_if.py  plotter.py  wx_mpl_dynamic_graph.py
Report/: .gitignore  0-intro.tex  1-control.tex  2-ADC.tex  3-Coil.tex  4-mouse.tex  5-Flash.tex  6-software.tex  7-power.tex  8-conclusions.tex  Copertina.odt  Makefile  report.tex
Report/Graphics/: SD.eps  Supply.eps  inputStage.eps  mouseOFW.eps  mouseRST.eps
Results/: fast_power.c
Results/Test_magneti/: banana.m  neodimio.m
Schema/: Supply.sch  coilControl.sch  maglev.cmp  maglev.kicad_pcb  maglev.net  maglev.pro  maglev.sch  mouseControl.sch  mouseModel.sch  supply.pro
Simulation/: coil_model-cache.lib  coil_model.cir  coil_model.pro  coil_model.sch  prova.cir
Stellaris/: CMakeLists.txt
Stellaris/CMake/: FindStellarisware.cmake
Stellaris/ConstantField/: CMakeLists.txt  onOff.c  startup_gcc.c  variables.h
